...
    logout();
  };

  return (
    <SafeAreaView
      className="relative flex h-full flex-1 items-center bg-white"
      testID="login_with_email_screen"
    >
      <CustomActivityIndicator isVisible={isLoading} />

      {isShowVerifiedErrorModal && (
        <ConfirmDialog
          title={t("dialog.register.title") || ""}
...
            <View>
              <TouchableOpacity
                onPress={() => {
                  setErrMessage("");
                  navigation.navigate("ForgotPasswordScreen");
                }}
                testID="forgotPasswordButton"
              >
                <Text className="my-5 px-24 text-center text-h6 leading-6 text-gray-dark">
                  {t("forgot_password")}
                </Text>
              </TouchableOpacity>

...
